<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_zero_margin"
    android:paddingRight="@dimen/activity_zero_margin"
    android:paddingTop="@dimen/activity_zero_margin"
    tools:context="com.example.triante.translatingheadsetapp.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mainActivity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/splashBackgroundColor"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="4dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <Button
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="Off"
                android:layout_alignParentLeft="true"
                android:id="@+id/off_toolbarButton"
                android:visibility="visible"
                android:clickable="true"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/app_name"
        android:id="@+id/textView12" />


    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/button_connect"
        android:textColor="#fff"
        android:id="@+id/bConnect_main"
        android:layout_marginTop="68dp"
        android:layout_below="@+id/mainActivity_toolbar"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/headset_mainImage"
        android:background="@drawable/ic_headset"
        android:layout_alignTop="@+id/bConnect_main"
        android:layout_toLeftOf="@+id/textView12"
        android:layout_toStartOf="@+id/textView12" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/speaker_glow_mainImage"
        android:background="@drawable/ic_speaker_glow"
        android:visibility="invisible"
        android:layout_alignTop="@+id/bConnect_main"
        android:layout_toRightOf="@+id/textView12"
        android:layout_toEndOf="@+id/textView12" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/speaker_mainImage"
        android:background="@drawable/ic_speaker"
        android:layout_alignTop="@+id/speaker_glow_mainImage"
        android:layout_alignLeft="@+id/speaker_glow_mainImage"
        android:layout_alignStart="@+id/speaker_glow_mainImage" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/headset_glow_mainImage"
        android:background="@drawable/ic_headset_glow"
        android:visibility="invisible"
        android:layout_alignTop="@+id/headset_mainImage"
        android:layout_alignLeft="@+id/headset_mainImage"
        android:layout_alignStart="@+id/headset_mainImage" />

    <Space
        android:layout_width="@dimen/spacing_padding"
        android:layout_height="@dimen/spacing_padding"
        android:id="@+id/space_main"
        android:layout_below="@+id/bConnect_main"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chat History"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/historyTitle"
        android:layout_below="@+id/space_main"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        app:srcCompat="@drawable/divider_horizontal"
        android:layout_below="@+id/historyTitle"
        android:id="@+id/menu_splitter" />

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/wvChatHistory"
        android:layout_below="@id/menu_splitter">
    </WebView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        app:srcCompat="@drawable/divider_vertical"
        android:id="@+id/menu_splitter_R"
        android:layout_alignTop="@+id/wvChatHistory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        app:srcCompat="@drawable/divider_vertical"
        android:id="@+id/menu_splitter_L"
        android:layout_alignTop="@+id/wvChatHistory"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        app:srcCompat="@drawable/divider_horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/menu_splitter_below" />


</RelativeLayout>
